homeworks/dudnyk/module-3/lesson-8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-lvl7
  labels:
    app: course-app-lvl7
spec:
  replicas: 15
  selector:
    matchLabels:
      app: course-app-lvl7
  template:
    metadata:
      labels:
        app: course-app-lvl7
    spec:
      containers:
        - name: course-app-id
          image: illiadudnyk/course-app-id:1.5
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet: /healthz
            port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: redis:8.0
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
