homeworks/dudnyk/module-3/lesson-8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app.local
      secretName: secret-name
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-cluster-ip
                port:
                  number: 8080
